# ProgettoSOL-2022-2023

./: CMakeLists.txt  Main.c  Makefile  README.md  farm
libs/: Collector.h  Master_Thread.h  Thread_Worker.h  ascending_queue.h  mystring.h  parameters.h  queue.h  utilities.h
libs/src/: Collector.c  Master_Thread.c  Thread_Worker.c  ascending_queue.c  mystring.c  queue.c  utilities.c
script/: test1.sh  test2.sh
